--- a/index.html
+++ b/index.html
@@ -15,23 +15,23 @@
       <nav class="navbar">
         <div class="navbar__logo" alt="brand">
           <h2>
-            <a href="#Inicio">
+            <a href="index.html">
               M<span>S</span>
             </a>  
           </h2>
         </div>
         <ul class="navbar__menu">
-          <li><a class="menu--activo" href="#Inicio">Inicio</a></li>
-          <li><a class="" href="#Sobre_mi">Sobre mi</a></li>
-          <li><a class="" href="#Portafolio">Portafolio</a></li>
-          <li><a class="" href="#Contacto">Contacto</a></li>
+          <li><a class="menu--activo" href="index.html">Inicio</a></li>
+          <li><a class="" href="sobremi.html">Sobre mi</a></li>
+          <li><a class="" href="portafolio.html">Portafolio</a></li>
+          <li><a class="" href="contacto.html">Contacto</a></li>
         </ul>
       </nav>
     </header>
     <!--FIN HEADER-->  
 
     <!--INICIA MAIN-->
-    <main class="main" id="Inicio">
+    <main class="main__inicio" id="Inicio">
       <div class="main__info">
         <h1>¡Hola! soy Matias<span>Suarez</span></h1>
         <p>Este sitio tiene como finalidad dar información importante sobre mi carrera profesional.  Mis proyectos, formaciones, experiencias laborales y expectativas a futuro. Te invito a navegar por todas las secciones y ponerte en contacto conmigo ante cualquier consulta.</p>
@@ -53,7 +53,9 @@
       <p>Me dedico al desarrollo de software, actualmente me encuentro en Argentina, mas precisamente en la ciudad de Tierra del Fuego, trabajando como back-end developer para una empresa crediticia
         local.</p>
       <p>Me considero una persona persistente y proactiva lo que me lleva a ser autodidacta y estar siempre en constante aprendizaje. Actualmente me encuentro estudiando Programación en la Universidad Tecnologica Nacional. </p>
-      <button class="button">Leer más</button>
+        <a href="sobremi.html">
+          <button class="button">Leer más</button>
+        </a>
     </div>
   </div>
   <!--FIN SOBRE MI-->
@@ -83,7 +85,7 @@
       </div>
       <div class="detallesProyecto__container">
         <button class="detallesProyecto">
-          <a href="">
+          <a href="portafolio.html">
             Más detalles
           </a>
         </button>
@@ -107,7 +109,7 @@
       </div>
       <div class="detallesProyecto__container">
         <button class="detallesProyecto">
-          <a href="">
+          <a href="portafolio.html">
             Más detalles
           </a>
         </button>
@@ -131,7 +133,7 @@
       </div>
       <div class="detallesProyecto__container">
         <button class="detallesProyecto">
-          <a href="">
+          <a href="portafolio.html">
             Más detalles
           </a>
         </button>
