--- a/contacto.html
+++ b/contacto.html
@@ -7,34 +7,50 @@
     <title>Matías Suarez | Contacto</title>
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v6.0.0/css/all.css" integrity="sha384-3B6NwesSXE7YJlcLI9RpRqGf2p/EgVH8BgoKTaUrmKNDkHPStTQ3EyoYjCGXaOTS" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 </head>
 <body>
-    <!--INICIO HEADER-->
-    <div class="container" alt="wrapper">
-        <header>
-            <nav class="navbar">
-                <div class="navbar__logo" alt="brand">
-                    <h2>
-                        <a href="index.html">
-                        M<span>S</span>
-                        </a>  
-                    </h2>
-                </div>
-                <ul class="navbar__menu">
-                    <li><a class="" href="index.html">Inicio</a></li>
-                    <li><a class="" href="sobremi.html">Sobre mi</a></li>
-                    <li><a class="" href="portafolio.html">Portafolio</a></li>
-                    <li><a class="menu--activo" href="contacto.html">Contacto</a></li>
-                </ul>
-            </nav>
-        </header>
-    </div> <!--FIN HEADER-->
+<!--INICIO NAVBAR-->
+<nav class="navbar navbar-expand-lg ">
+    <div class="container-fluid">
+        <a class="navbar-brand" href="index.html">M<span>S</span></a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon">
+            <i class="fa-solid fa-bars"></i>
+            </span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav">
+            <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="index.html">Inicio</a>
+            </li>
+        <li class="nav-item">
+            <a class="nav-link" href="sobremi.html">Sobre mi</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="portafolio.html">Portafolio</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link menu--activo" href="contacto.html">Contacto</a>
+        </li>
+        </ul>
+    </div>
+    </div>
+</nav>
+<!--FIN NAVBAR-->  
     <main class="main__contacto">
         <div class="main__contacto--info">
-            <h2>La comunicación es una ventana de oportunidades</h2>
+            <h2>Resolvé tus dudas</h2>
             <div class="contacto--divisor"></div>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Cum repellat alias soluta maiores neque at in, quos consequuntur, odio, dolor placeat! Vero aperiam laboriosam quaerat, quos cum consequatur hic reprehenderit.</p>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Recusandae aspernatur atque, delectus et quasi quaerat facere sunt ab necessitatibus, exercitationem, voluptas explicabo sequi qui fugit consequuntur dolore inventore rem praesentium?</p>
+            <p>No dudes en ponerte en contacto ante cualquier pregunta especifica, estaré atento a responder inquietudes, para poder
+                brindar mas informacion a todo el que la requiera.</p>
+            <p>Podes encontrarme en las redes sociales que estan a continuación o bien llenar el formulario con tus datos 
+                así puedo comunicarme a la brevedad📱 
+            </p>
+            <p>Siempre estoy dispuesto a escuchar nuevos proyectos, compartir conocimientos y sobre todo generar soluciones desarrollando software 👨‍💻 </p>
+            <a href="#footer">
+                <button class="button">Mis redes</button>
+            </a>
         </div>
         <img src="./img/contacto.jpg" alt="Comunicate con Matias Suarez">
     </main>
@@ -65,7 +81,7 @@
 
     <!--INICIA FOOTER-->
     <footer class="footer">
-        <div class="footer__container">
+        <div class="footer__container" id="footer">
             <h2>Matías Suárez</h2>
             <h5>Desarrolador de Software</h5>
         </div>
@@ -86,5 +102,6 @@
     </footer>
 
     <!--FINALIZA FOOTER-->    
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
 </html>
