--- a/contacto.html
+++ b/contacto.html
@@ -4,7 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="No dudes en ponerte en contacto ante cualquier pregunta especifica, estaré atento a responder inquietudes, para poder brindar mas informacion a todo el que la requiera">
+    <meta name="keywords" content="Desarrolador de software, Programador, Desarrollo web, Desarrollo front-end, Desarrollo back-end, HTML, CSS, JS, JavaScript, Bootstrap, Git, SASS, PHP, Symfony, Laravel, POO, Matias Suarez, Portafolio, Habilidades, Tecnologia, Contacto, Bases de datos, data base, SQL, Wordpress, consciente colectivo, tarjeta la red, Argentina, Tierra del Fuego, Rio grande, Profesional TI">
     <title>Matías Suarez | Contacto</title>
+    <link rel="icon" type="image/png" sizes="32x32" href="img/favicon-32x32.png">
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v6.0.0/css/all.css" integrity="sha384-3B6NwesSXE7YJlcLI9RpRqGf2p/EgVH8BgoKTaUrmKNDkHPStTQ3EyoYjCGXaOTS" crossorigin="anonymous">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
@@ -29,6 +32,9 @@
         </li>
         <li class="nav-item">
             <a class="nav-link" href="portafolio.html">Portafolio</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link " href="servicios.html">Servicios</a>
         </li>
         <li class="nav-item">
             <a class="nav-link menu--activo" href="contacto.html">Contacto</a>
