--- a/sobremi.html
+++ b/sobremi.html
@@ -4,7 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Me dedico al desarrollo de software, actualmente me encuentro en Argentina, mas precisamente en la Provincia de Tierra del Fuego, trabajando como back-end developer para una empresa crediticia local.">
+    <meta name="keywords" content="Desarrolador de software, Programador, Desarrollo web, Desarrollo front-end, Desarrollo back-end, HTML, CSS, JS, JavaScript, Bootstrap, Git, SASS, PHP, Symfony, Laravel, POO, Matias Suarez, Portafolio, Habilidades, Tecnologia, Contacto, Bases de datos, data base, SQL, Wordpress, consciente colectivo, tarjeta la red, Argentina, Tierra del Fuego, Rio grande, Profesional TI">
     <title>Matías Suarez | Sobre Mi</title>
+    <link rel="icon" type="image/png" sizes="32x32" href="img/favicon-32x32.png">
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v6.0.0/css/all.css" integrity="sha384-3B6NwesSXE7YJlcLI9RpRqGf2p/EgVH8BgoKTaUrmKNDkHPStTQ3EyoYjCGXaOTS" crossorigin="anonymous">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
@@ -28,6 +31,9 @@
                     </li>
                     <li class="nav-item">
                     <a class="nav-link" href="portafolio.html">Portafolio</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link " href="servicios.html">Servicios</a>
                     </li>
                     <li class="nav-item">
                     <a class="nav-link " href="contacto.html">Contacto</a>
@@ -68,43 +74,66 @@
             <div class="encabezados--divisor"></div>
         </div>
         <div class="habilidades__icon">
-            <i class="fa-brands fa-html5">
+            <div class="icon">
+                <i class="fa-brands fa-html5">
                 <p>HTML 5</p>
-            </i>
-            <i class="fa-brands fa-css3-alt">
+                </i>
+            </div>
+            <div class="icon"> 
+                <i class="fa-brands fa-css3-alt">
                 <p>CSS 3</p>
-            </i>
-            
-            <i class="fa-brands fa-bootstrap">
+                </i>
+            </div>    
+            <div class="icon">
+                <i class="fa-brands fa-bootstrap">
                 <p>Bootstrap</p>
-            </i>
-            <i class="fa-brands fa-sass">
+                </i>
+            </div>    
+            <div class="icon">
+                <i class="fa-brands fa-sass">
                 <p>Sass</p>
-            </i>
-            <i class="fa-brands fa-js">
+                </i>
+            </div>
+            <div class="icon">  
+                <i class="fa-brands fa-js">
                 <p>JavaScript</p>
-            </i>
-            <i class="fa-brands fa-php">
+                </i>
+            </div>    
+            <div class="icon">
+                <i class="fa-brands fa-php">
                 <p>PHP</p>
-            </i>
-            <i class="fa-solid fa-database">
+                </i>
+            </div>    
+            <div class="icon">
+                <i class="fa-solid fa-database">
                 <p>BD SQL</p>
-            </i>
-            <i class="fa-brands fa-symfony">
+                </i>
+            </div>    
+            <div class="icon">
+                <i class="fa-brands fa-symfony">
                 <p>Symfony</p>
-            </i>
-            <i class="fa-brands fa-laravel">
+                </i>
+            </div>    
+            <div class="icon">
+                <i class="fa-brands fa-laravel">
                 <p>Laravel</p>
-            </i>
-            <i class="fa-brands fa-wordpress">
+                </i>
+            </div>
+            <div class="icon">
+                <i class="fa-brands fa-wordpress">
                 <p>Wordpress</p>
-            </i>
-            <i class="fa-brands fa-github-square">
+                </i>
+            </div>
+            <div class="icon">
+                <i class="fa-brands fa-github-square">
                 <p>Github</p>
-            </i>
-            <i class="fa-brands fa-gitlab">
+                </i>
+            </div>    
+            <div class="icon">
+                <i class="fa-brands fa-gitlab">
                 <p>Gitlab</p>
-            </i>
+                </i>
+            </div>
         </div>
     </div>
 
