--- a/portafolio.html
+++ b/portafolio.html
@@ -4,7 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Obtene mas detalles de mi portafolio, trabajos finalizados y en curso, asi tambien como proyectos a futuro">
+    <meta name="keywords" content="Desarrolador de software, Programador, Desarrollo web, Desarrollo front-end, Desarrollo back-end, HTML, CSS, JS, JavaScript, Bootstrap, Git, SASS, PHP, Symfony, Laravel, POO, Matias Suarez, Portafolio, Habilidades, Tecnologia, Contacto, Bases de datos, data base, SQL, Wordpress, consciente colectivo, tarjeta la red, Argentina, Tierra del Fuego, Rio grande, Profesional TI">
     <title>Matías Suarez | Portafolio</title>
+    <link rel="icon" type="image/png" sizes="32x32" href="img/favicon-32x32.png">
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v6.0.0/css/all.css" integrity="sha384-3B6NwesSXE7YJlcLI9RpRqGf2p/EgVH8BgoKTaUrmKNDkHPStTQ3EyoYjCGXaOTS" crossorigin="anonymous">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
@@ -31,6 +34,9 @@
             <a class="menu--activo nav-link" href="portafolio.html">Portafolio</a>
           </li>
           <li class="nav-item">
+            <a class="nav-link " href="servicios.html">Servicios</a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link " href="contacto.html">Contacto</a>
           </li>
         </ul>
@@ -42,7 +48,7 @@
   <!-- INICIO PORTFOLIO -->
   <div class="portafolio__seccion">
     <div class="portafolio__encabezados">
-      <h2>Mi Portafolio</h2>
+      <h1>Mi Portafolio</h1>
       <div class="encabezados--divisor"></div>
     </div>
 
@@ -50,7 +56,7 @@
       <div class="portafolio__tarjeta">
       <div class="portafolio__img--1">
       </div> 
-      <div class="portafolio__tarjeta--titulo"> 
+      <div class="portafolio__tarjeta--contenido"> 
         <h2>Conscinete Colectivo</h2>
         <p>Consciente colectivo es un espacio de jovenes de activismo y militancia socio-ambiental con el obketivo de incidir
           en las decisiones politicas. Su objetivo es que la crisis cocial, climatica y ambiental, sea considerada como prioridad.
@@ -77,12 +83,12 @@
       <div class="portafolio__tarjeta">
       <div class="portafolio__img--2">
       </div> 
-      <div class="portafolio__tarjeta--titulo"> 
+      <div class="portafolio__tarjeta--contenido"> 
         <h2>Tarjeta La Red</h2>
         <p>Este es mi primer proyecto en esta empresa, la idea es ir transformando todo el codigo PHP de la web a JS.
           actualmente llevamos un 63%.
         </p>
-        <p>Ademas de las tecnologias anterior mencionadas se utiliza HTML para el marcado y CSS para los estilos.</p>
+        <p>Ademas nos encontramos desarrollando un algoritmo dentro de los protocolos de Siscard para que nuestra tarjeta sea aceptada en las terminales Lapos.</p>
       </div>
       <div class="portafolio__linkProyecto">
         <a href="https://gitlab.com/tarjetalared/lared-web" target="_blank">
@@ -100,7 +106,7 @@
       <div class="portafolio__tarjeta">
       <div class="portafolio__img--3">
       </div> 
-      <div class="portafolio__tarjeta--titulo"> 
+      <div class="portafolio__tarjeta--contenido"> 
         <h2>Aplicación Finanzas Personales</h2>
         <p>Actualmente me encuentro desarrollando esta aplicación en JavaScript que ayuda a llevar los ingresos y egresos, la cual
           nos va a ayudar a administrar nuestras finanzas lo mas cómodo posible.</p>
